--- a/practice32/apple&banana.ipynb
+++ b/practice32/apple&banana.ipynb
@@ -354,6 +354,84 @@
     "plt.legend()\n",
     "plt.xlabel('Circumference')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=82.438425661083, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fea = 'L/W'\n",
+    "fruits[fea] = fruits['length']/fruits['width']\n",
+    "stats.ttest_ind(fruits.loc[fruits['class'] == 0, fea],\n",
+    "                fruits.loc[fruits['class'] == 1, fea])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-18.33979554877528, pvalue=1.4737736564093967e-69)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fea = 'area'\n",
+    "fruits[fea] = fruits['length']*fruits['width']\n",
+    "stats.ttest_ind(fruits.loc[fruits['class'] == 0, fea],\n",
+    "                fruits.loc[fruits['class'] == 1, fea])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.3170522756675043, pvalue=0.1879721312693096)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fea = 'circumference'\n",
+    "fruits[fea] = 2*(fruits['length']+fruits['width'])\n",
+    "stats.ttest_ind(fruits.loc[fruits['class'] == 0, fea],\n",
+    "                fruits.loc[fruits['class'] == 1, fea])"
+   ]
   }
  ],
  "metadata": {
